--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <title>Cronômetro</title>
 </head>
 <body>
-    <header>
-        <h1>CRONÔMETRO</h1>
-    </header>
     <section>
-        <h1 id="screen">00:00:00:000</h1>
-        <button onclick="iniciar()" class="iniciar">Iniciar</button>
-        <button onclick="pausar()" class="pausar">Pausar</button>
-        <button onclick="parar()" class="parar">Parar</button>
+        <main>
+            <h1 id="screen">00:00:00:000</h1>
+            <button onclick="iniciar()" class="iniciar">Iniciar</button>
+            <button onclick="pausar()" class="pausar">Pausar</button>
+            <button onclick="parar()" class="parar">Parar</button>
+        </main>
     </section>
     <script src="script.js"></script>
 </body>
